<resources>
    <string name="app_name">Generals</string>

    <!-- Кнопки -->
    <string name="rules">Rules</string>
    <string name="settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue game</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="choose_army">Choose army</string>
    <string name="pause">Pause</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="upgrade">Upgrade</string>

    <!-- Start -->
    <string name="start_choose_your_army">Choose your army</string>
    <string name="start_choose_your_enemy">Choose your enemy</string>
    <string name="start_game">Start game</string>
    <string name="start_enter_your_name">Enter your name</string>
    <string name="start_error_input_name">Invalid name</string>

    <!-- Армии -->
    <string name="russia">Russia</string>
    <string name="ukraine">Ukraine</string>
    <string name="usa">USA</string>
    <string name="china">China</string>
    <string name="iraq">Iraq</string>

    <!-- База -->
    <string name="resources">Resources</string>

    <!-- Битва -->
    <string name="battle_title">Battle</string>

    <!-- Диалог Битва -->
    <string name="dialog_battle_title">You were attacked!</string>
    <string name="dialog_battle_to_battle">To battle</string>

    <!-- Диалог Победа -->
    <string name="dialog_win_title">You win!</string>
    <string name="dialog_win_to_base">To Base</string>

    <!-- Диалог Поражение -->
    <string name="dialog_lose_title">You lose!</string>
    <string name="dialog_lose_to_base">To Base</string>

    <!-- Диалог Пауза -->
    <string name="dialog_pause_title">Pause</string>
    <string name="dialog_pause_continue">Continue</string>

    <!-- Диалог Настройки -->
    <string name="dialog_settings_title">Settings</string>
    <string name="dialog_settings_close">Close</string>

    <!-- YesNoDialog EXIT_GAME -->
    <string name="yes_no_mode_exit_game_title">Exit the game</string>
    <string name="yes_no_mode_exit_game_description">Are you sure you want to exit the game?</string>

    <!-- YesNoDialog EXIT_GAME -->
    <string name="yes_no_mode_start_battle_title">To battle</string>
    <string name="yes_no_mode_start_battle_description">Are you ready to join the battle?</string>

    <!-- Здания -->
    <string name="headquarters">Headquarters</string> <!-- Штаб -->
    <string name="oil_derrick">Oil derrick</string> <!-- Нефтяная вышка -->
    <string name="barracks">Barracks</string> <!-- Казарма -->
    <string name="factory">Factory</string> <!-- Завод -->
    <string name="aerodrome">Aerodrome</string> <!-- Аэродром -->
    <string name="laboratory">Laboratory</string> <!-- Лаборатория -->
    <string name="academy">Academy</string> <!-- Лаборатория -->

    <!-- Завод -->
    <string name="tank">Tank</string> <!-- Танк -->
    <string name="howitzer">Howitzer</string> <!-- Гаубийца -->
    <string name="armored_car">Armored car</string> <!-- Бронеавтомобиль -->

    <!-- Казарма -->
    <string name="shooter">Shooter</string> <!-- Стрелок -->
    <string name="grenade_launcher">Grenade launcher</string> <!-- Гранатометчик -->
    <string name="sniper">Sniper</string> <!-- Снайпер -->

    <!-- Аэродром -->
    <string name="fighter">Fighter</string> <!-- Самолет -->
    <string name="helicopter">Helicopter</string> <!-- Вертолет -->

</resources>